Fix : Removed overflow from css

--- a/Poemify.MVC/wwwroot/assets/css/creative-studio.css
+++ b/Poemify.MVC/wwwroot/assets/css/creative-studio.css
@@ -11786,35 +11786,39 @@ pre .code {
   min-height: 600px;
   background: url(../imgs/header.jpg) no-repeat center center fixed;
   background-size: cover;
-  width:100vw;
+  left:0;
+  top:0;
+  margin-left:-10px;
 }
 
-.header .overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.45);
-  color: #fff;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
+    .header .overlay {
+        margin-left: -10px;
+        /*position: absolute;
+        left: 0;
+        top: 0;*/
+       
+        width: inherit;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.45);
+        color: #fff;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+    }
 
 .header .overlay .subtitle {
   margin-top: -20px;
